--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+ 
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>TLC Classrooms</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
@@ -23,6 +24,7 @@
       width: 100%;
       height: 100%;
 	  touch-action: none;
+	   -ms-touch-action: none;
     }
 	#instruction-box {
       position: absolute;
@@ -39,11 +41,12 @@
 	
 	#button-panel {
 	  position: absolute;
-	  top: 10px;
+	  bottom: 10px;
+	  left: 10px;
 	  right: 10px;
 	  z-index: 1001;
 	  display: flex;
-	  flex-direction: column;
+	  flex-direction: row;
 	  gap: 20px;
 	}
 
@@ -51,10 +54,10 @@
 	  background-color: #007BFF;
 	  color: white;
 	  border: none;
-	  padding: 26px 30px;
+	  padding: 20px 16px;
 	  border-radius: 4px;
 	  cursor: pointer;
-	  font-size: 18px;
+	  font-size: 14px;
 	  transition: background 0.2s;
 	  font-family: Arial, sans-serif;
 	}
@@ -84,7 +87,7 @@
 		
 	</div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
 <script>
    let panZoom;
@@ -109,22 +112,67 @@
 			  zoomEnabled: true,
 			  controlIconsEnabled: true,
 			  fit: true,
-			  center: true
+			  center: true,
+			  dblClickZoomEnabled: true,
+			  mouseWheelZoomEnabled: true,
+			  panEnabled: true,
+			  customEventsHandler: {
+				  haltEventListeners: ['touchstart', 'touchend', 'touchmove', 'touchleave', 'touchcancel'],
+				  init: function(options) {
+					let instance = options.instance;
+					let initialScale = null;
+					let lastTouches = [];
+					let lastPan = null;
+
+					options.svgElement.addEventListener('touchstart', function(e) {
+					  if (e.touches.length === 2) {
+						e.preventDefault();
+						initialScale = instance.getZoom();
+						lastTouches = [e.touches[0], e.touches[1]];
+					  } else if (e.touches.length === 1) {
+						lastPan = { x: e.touches[0].clientX, y: e.touches[0].clientY };
+					  }
+					});
+
+					options.svgElement.addEventListener('touchmove', function(e) {
+					  if (e.touches.length === 2) {
+						e.preventDefault();
+						let [touch1, touch2] = e.touches;
+						let dx = touch2.clientX - touch1.clientX;
+						let dy = touch2.clientY - touch1.clientY;
+						let distance = Math.sqrt(dx * dx + dy * dy);
+
+						let [last1, last2] = lastTouches;
+						let lastDx = last2.clientX - last1.clientX;
+						let lastDy = last2.clientY - last1.clientY;
+						let lastDistance = Math.sqrt(lastDx * lastDx + lastDy * lastDy);
+
+						let scaleFactor = distance / lastDistance;
+						instance.zoom(initialScale * scaleFactor);
+					  } else if (e.touches.length === 1 && lastPan) {
+						e.preventDefault();
+						let currentX = e.touches[0].clientX;
+						let currentY = e.touches[0].clientY;
+						let dx = currentX - lastPan.x;
+						let dy = currentY - lastPan.y;
+						instance.panBy({ x: dx, y: dy });
+						lastPan = { x: currentX, y: currentY };
+					  }
+					});
+
+					options.svgElement.addEventListener('touchend', function(e) {
+					  lastTouches = [];
+					  lastPan = null;
+					});
+				  },
+				  destroy: function() {
+					// Optional cleanup
+				  }
+				  }
 			});
 			
-			const hammer = new Hammer(selectedSVG);
-			hammer.get('pinch').set({ enable: true });
-
-			let initialZoom = 1;
-
-			hammer.on('pinchstart', function (ev) {
-			  initialZoom = panZoom.getZoom();
-			});
-
-			hammer.on('pinchmove', function (ev) {
-			  const point = ev.center;
-			  panZoom.zoomAtPoint(initialZoom * ev.scale, { x: point.x, y: point.y });
-			});
+			
+			 
 			
 		})
 		.catch(err => {
